--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
             </div>
         </section>
     
-    <section id="portfolio" class="portfolio">
-        <div class="contenido-seccion">
-             <h2>PERSONAJES 3D</h2>
-             <div class="proyecto">
-                <iframe width="340" height="250" src="https://www.youtube.com/embed/pLxH9R0aKs8" frameborder="0" allowfullscreen></iframe>
-             </div>
-           </div>
+   <section id="portfolio" class="portfolio">
+            <div class="contenido-seccion">
+                 <h2>PERSONAJES 3D</h2>
+                 <div class="proyecto"> <iframe title="Gru_Mi_Villano_Favorito" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="342" height="300" src="https://sketchfab.com/models/ffcef713ec904c6badb6f09eac68912e/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #ffffff;"> <a href="https://sketchfab.com/3d-models/gru-mi-villano-favorito-ffcef713ec904c6badb6f09eac68912e?utm_medium=embed&utm_campaign=share-popup&utm_content=ffcef713ec904c6badb6f09eac68912e" target="_blank" rel="nofollow" style="font-weight: bold; color: #007b94;"></a>  <a href="https://sketchfab.com/Brayan_Lopez?utm_medium=embed&utm_campaign=share-popup&utm_content=ffcef713ec904c6badb6f09eac68912e" target="_blank" rel="nofollow" style="font-weight: bold; color: #007b94;">  </a>  <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=ffcef713ec904c6badb6f09eac68912e" target="_blank" rel="nofollow" style="font-weight: bold; color: #007b94;"></a></p>
+                    <div class="overlay">
+                </div>
+            </div>
         </div>
     </section>
     
