--- a/index.html
+++ b/index.html
@@ -293,8 +293,9 @@
             <h2>DISEÑOS</h2>
             
             <div class="galeria">
+                <div class="galeria">
                 <div class="proyecto">
-                    <img src="https://drive.google.com/uc?id=1fKdwH5nNUsH9310WsXsf6Pan7bLSl03g" alt="">
+                    <img src="img/Rantur.png"   height="258" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
                         <p>Fotografía</p>
