--- a/index.html
+++ b/index.html
@@ -291,11 +291,10 @@
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>DISEÑOS</h2>
-            
             <div class="galeria">
                 <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/Rantur.png"   height="258" alt="">
+                    <img src="img/LI.png"   height="258" alt="">
                     <div class="overlay">
                         <h3>Diseño Creativo</h3>
                         <p>Fotografía</p>
