--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Portafolio</title>
+    <title>Portafolio David López</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -292,7 +292,6 @@
         <div class="contenido-seccion">
             <h2>DISEÑOS</h2>
             <div class="galeria">
-                <div class="galeria">
                 <div class="proyecto">
                     <img src="img/LI.png"   height="258" alt="">
                     <div class="overlay">
