--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                         </li>
                         <li>
                             <strong>Website</strong>
-                            www.example.com
+                            bdavidl.github.io/
+                        </li>
+                         <li>
+                            <strong>Youtube</strong>
+                            https://www.youtube.com/channel/UC_AsAyBJan-X3iSYLV55bFw
                         </li>
                         <li>
                             <strong>Dirección</strong>
