--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/David1.png" alt="">
+                <img src="img/David1.gif" alt="">
             </div>
             <h1>DAVID LÓPEZ</h1>
             <h2>INGENIERO EN MULTIMEDIA</h2>
