--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>Desarrollador Web</span>
+                            <span>Diseñador Multimedia - Desarrollador Web</span>
                         </li>
                     </ul>
                 </div>
