--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            Cajica - Cundinamarca
+                            Cajicá - Cundinamarca
                         </li>
                         <li>
                             <strong>Cargo</strong>
