--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
                 </div>
               </div>
               
-            <div id="Tex">
+            <div id="texto">
                 <p>El Tetris es un clásico juego de puzzle en el que el jugador debe completar filas de bloques con diferentes formas que caen desde la parte superior de la pantalla. Si se completa una fila completa, se eliminará y se ganarán puntos. El objetivo del juego es evitar que los bloques se acumulen en la parte superior de la pantalla para poder seguir jugando. Cuanto más tiempo juegues, más rápido caerán los bloques y más difícil será completar las filas. Este juego fue programado utilizando HTML, CSS y JavaScript, que son lenguajes de programación para la web. Puedes encontrar una versión en línea del juego en mi sitio web o portafolio, o también puedes descargar los archivos de código fuente y ejecutarlo localmente en tu ordenador. ¡Disfruta jugando a este clásico juego de Tetris! </p>
             </div>
 
