--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>Diseñador Multimedia - Desarrollador Web</span>
+                            <span>Diseñador Multimedia - Animación 2D - 3D</span>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
                 <div class="col">
                     <h3>Habilidades Técnicas</h3>
                     <div class="skill">
-                        <span>Javascript</span>
+                        <span>Python</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>75%</span>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>HTML & CSS</span>
+                        <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>85%</span>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Autodesk Maya</span>
+                        <span>Animación 2D-3D</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>95%</span>
@@ -175,7 +175,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Base de datos</span>
+                        <span>Motion Graphics</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>70%</span>
@@ -261,14 +261,13 @@
                     
                 </div>
 
-                <div class="col derecha">
+                    <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
-                        <h4>Diseñador Grafico</h4>
-                        <span class="casa">TRABAJO PUBLICITARIO
-                            DISEÑO - LOGO</span>
-                        <span class="fecha">2019</span>
-                        <p>Diseño de un logo para una fundación de acompañamiento a jóvenes. El objetivo era crear una identidad visual que representara los valores y objetivos de la organización, basándome en una investigación detallada de su visión, misión y público objetivo. El diseño representa la idea de un camino hacia el éxito, con elementos que simbolizan el crecimiento personal y la comunidad. El resultado final fue un logo moderno y atractivo, que puede ser utilizado en diferentes medios de comunicación.</p>
+                        <h4>Motion Graphics Designer - Animación 2D</h4>
+                        <span class="casa">Sodimac Colombia - Homecenter</span>
+                        <span class="fecha">2023</span>
+                        <p>Crear y producir videos de animación Motion graphics y video, como parte de la Oficina Apoyo a Tiendas (OAT) de Sodimac, con el fin de explicar temas de interés para los nuevos colaboradores asegurando la coherencia con el manual y la identidad corporativa de Sodimac</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
