--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h3>Datos Personales</h3>
                     <ul>
                         <li>
-                            <strong>Cumpleaños</strong>
+                            <strong>Nacimiento</strong>
                             03-05-2001
                         </li>
                         <li>
@@ -76,7 +76,7 @@
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            Cajicá - Cundinamarca
+                            Chiquinquirá - Boyacá
                         </li>
                         <li>
                             <strong>Cargo</strong>
@@ -248,6 +248,18 @@
                             <div class="circuloi"></div>
                         </div>
                     </div>
+
+                     <div class="item izq">
+                        <h4>Tegnologo Animación Digital</h4>
+                        <span class="casa">SERVICIO NACIONAL DE APRENDIZAJE - SENA
+                            (SENA)</span>
+                        <span class="fecha">2023 - 2025</span>
+                        <p>Soy estudiante de tecnología en animación digital y actualmente me encuentro avanzando en mi programa de estudios. Durante mi formación, he adquirido conocimientos y habilidades en áreas como diseño gráfico, animación, programación, edición de video y audio, entre otros. Además, he tenido la oportunidad de participar en proyectos multidisciplinarios que me han permitido desarrollar habilidades para trabajar en equipo y desempeñarme en diferentes roles y tareas.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    
                     <div class="item izq">
                         <h4>Ingenieria en Multimedia</h4>
                         <span class="casa">UNIVERSIDAD MILITAR NUEVA GRANADA
@@ -265,7 +277,7 @@
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
                         <h4>Motion Graphics Designer - Animación 2D</h4>
-                        <span class="casa">Sodimac Colombia - Homecenter</span>
+                        <span class="casa">SODIMAC COLOMBIA - HOMECENTER</span>
                         <span class="fecha">2023</span>
                         <p>Crear y producir videos de animación Motion graphics y video, como parte de la Oficina Apoyo a Tiendas (OAT) de Sodimac, con el fin de explicar temas de interés para los nuevos colaboradores asegurando la coherencia con el manual y la identidad corporativa de Sodimac</p>
                         <div class="conectord">
