--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     </div>
 
                      <div class="item izq">
-                        <h4>Tegnologo Animación Digital</h4>
+                        <h4>Tecnólogo - Animación Digital</h4>
                         <span class="casa">SERVICIO NACIONAL DE APRENDIZAJE - SENA
                             (SENA)</span>
                         <span class="fecha">2023 - 2025</span>
