--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             </div>
             <h1>DAVID LÓPEZ</h1>
             <h2>INGENIERO EN MULTIMEDIA</h2>
-            <h2>TECNÓLOGO EN ANIMACIÓN DIGITAL</h2>
-            <h2>Motion Graphics | Animation Specialist | Graphic designer | Illustrator | Video editor</h2>
+            <h2>Motion Graphics | Animation Specialist | Graphic designer | Video editor | Moodle administrator </h2>
             <div class="redes">
                 <a href="mailto:lopezcastellanosb6@gmail.com?subject=Asunto del correo electrónico"><i class="fa fa-envelope-open"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=3008987745"><i class="fab fa-whatsapp"></i></a>
