--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <!-- MENU ENCABEZADO -->
-    <div class="contenedor-header">
-        <header>
-            <div class="logo">
-                <a href=""><img src="img/Logo1.png" alt="Logo de DAVID"></a>            </div>
-            <nav id="nav">
-                <ul>
-                    <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
-                    <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
-                    <li><a href="#skills" onclick="seleccionar()">HABILIDADES</a></li>
-                    <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
-                    <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
-                    <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
-                </ul>
-            </nav>
-            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </header>
-    </div>
+
+  <div class="spot-publicitario">
+    <p class="texto-animado">¡Transformando ideas innovadoras en experiencias visuales memorables, impactantes y únicas!</p>
+    
+</div>
+
+<div class="contenedor-header">
+    <header>
+        <div class="logo">
+            <a href=""><img src="img/Logo1.png" alt="Logo de DAVID"></a>
+        </div>
+        <nav id="nav">
+            <ul>
+                <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
+                <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
+                <li><a href="#skills" onclick="seleccionar()">HABILIDADES</a></li>
+                <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
+                <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
+                <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
+            </ul>
+        </nav>
+        <div class="nav-responsive" onclick="mostrarOcultarMenu()">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </header>
+</div>
 
     <!-- SECCION INICIO -->
     <section id="inicio" class="inicio">
@@ -43,7 +49,6 @@
             <div class="redes">
                 <a href="mailto:lopezcastellanosb6@gmail.com?subject=Asunto del correo electrónico"><i class="fa fa-envelope-open"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=3008987745"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://www.behance.net/tudirecciondebehance" target="_blank">Be</a>
                 <a href="https://www.linkedin.com/in/david1711/"><i class="fa-brands fa-linkedin-in"></i></a>
 
             </div>
@@ -54,7 +59,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Brayan David</span> un profesional dinámico y creativo apasionado por la animación 2D y el diseño multimedia. Mi experiencia se centra en roles clave de la animación, donde he desarrollado un sólido conocimiento en herramientas y técnicas que me han vuelto versátil y eficiente en la gestión de proyectos digitales multimedia. Poseo un sólido conocimiento en lenguajes de programación y metodologías ágiles de desarrollo, habilidades que aplico para gestionar proyectos de manera efectiva y colaborar eficientemente en equipos multidisciplinarios. Mi enfoque principal radica en diseñar, implementar y gestionar procesos, técnicas y sistemas para el desarrollo de proyectos digitales multimedia. Específicamente, mi experiencia se destaca en las áreas de animación 2D y Motion Graphics, donde he demostrado habilidades excepcionales en la creación de contenido visualmente atractivo y efectivo. Soy un profesional comprometido con la calidad, la eficiencia y la innovación, siempre en búsqueda de nuevos desafíos y oportunidades de crecimiento.</p>
+            <p><span>Hola, soy Brayan David</span>, un profesional dinámico y creativo apasionado por la animación 2D y el diseño multimedia. Mi experiencia se centra en roles clave de la animación, donde he desarrollado un sólido conocimiento en herramientas y técnicas que me han vuelto versátil y eficiente en la gestión de proyectos digitales multimedia. Poseo un sólido dominio en lenguajes de programación y metodologías ágiles de desarrollo, habilidades que aplico para gestionar proyectos de manera efectiva y colaborar eficientemente en equipos multidisciplinarios. Además, cuento con experiencia en la implementación y gestión de plataformas educativas como Moodle, fortaleciendo mi capacidad para diseñar, implementar y gestionar procesos, técnicas y sistemas para el desarrollo de proyectos digitales multimedia. Específicamente, mi experiencia se destaca en las áreas de animación 2D y Motion Graphics, donde he demostrado habilidades excepcionales en la creación de contenido visualmente atractivo y efectivo. Soy un profesional comprometido con la calidad, la eficiencia y la innovación, siempre en búsqueda de nuevos desafíos y oportunidades de crecimiento.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -62,8 +67,8 @@
                     <h3>Datos Personales</h3>
                     <ul>
                         <li>
-                            <strong>Nacimiento</strong>
-                            03-05-2001
+                            <strong>Edad</strong>
+                            23 Años
                         </li>
                         <li>
                             <strong>Teléfono</strong>
@@ -106,7 +111,7 @@
                       </div>
                         <div class="interes">
                           <i class="fas fa-plane"></i>
-                          <span>VIAJAR</span>
+                          <span>EDUCACIÓN</span>
                       </div>
                         <div class="interes">
                             <i class="fa-solid fa-person-hiking"></i>
