--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             </div>
             <h1>DAVID LÓPEZ</h1>
             <h2>INGENIERO EN MULTIMEDIA</h2>
-            <h2>CHIQUINQUIRÁ - BOYACÁ</h2>
-            <h2>B0GOTÁ - COLOMBIA</h2>
+            <h2>BOGOTÁ - COLOMBIA</h2>
             <h2>Motion Graphics | Animation Specialist | Graphic designer | Video editor | Moodle administrator | Illustrator | Web deigner </h2>
             <div class="redes">
                 <a href="mailto:lopezcastellanosb6@gmail.com?subject=Asunto del correo electrónico"><i class="fa fa-envelope-open"></i></a>
