--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             +57 3008987745
                         </li>
                         <li>
-                            <strong>Email</strong>
+                            <strong>Correo</strong>
                             lopezcastellanosb6@gmail.com
                         </li>
                         <li>
@@ -85,7 +85,7 @@
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            Chiquinquirá - Boyacá
+                            Bogotá - Colombia
                         </li>
                         <li>
                             <strong>Cargo</strong>
