--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="spot-publicitario">
-    <p class="texto-animado">Actualmente se esta realizando labores de mantenimiento para optimizar tu experiencia en el sitio web. Agradezco tu comprensión y paciencia mientras se completan estas actualizaciones. ¡Vuelve pronto para descubrir las mejoras!</p>
+    <p class="texto-animado">Estamos trabajando para mejorar esta página. ¡Vuelve pronto!</p>
     
 </div>
 
